<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_cd"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp_18"
            android:visibility="visible"
            android:text="@string/create" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_D8D"/>
    <LinearLayout
        android:id="@+id/create_mkdir_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/setting_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/download_img"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_21"
            android:src="@mipmap/ic_mkdir" />

        <TextView
            android:id="@+id/download_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/create_mkdir"
            android:textColor="@color/color_696"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/upload_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/setting_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/dp_32"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_21"
            android:src="@mipmap/ic_upload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/file_upload"
            android:textColor="@color/color_696"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


</LinearLayout>