<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_cd"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_type"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_24"
            tools:src="@mipmap/ic_pic" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:textColor="@color/color_333"

            android:textSize="16sp"
            android:visibility="visible"
            tools:text="文件名称.pic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/setting_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/download_img"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_21"
            android:src="@mipmap/ic_download" />

        <TextView
            android:id="@+id/download_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/download"
            android:textColor="@color/color_696"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/setting_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_21"
            android:src="@mipmap/ic_edit" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/color_696"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copy_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/setting_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_21"
            android:src="@mipmap/ic_copy" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/copy"
            android:textColor="@color/color_696"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/setting_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/dp_32"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_21"
            android:src="@mipmap/icon_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/color_696"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


</LinearLayout>