<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dir_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_333"
            android:padding="@dimen/dp_16"
            android:text="@string/all_file"/>

        <TextView
            android:id="@+id/check_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_333"
            android:layout_alignParentRight="true"
            android:background="@drawable/setting_bg"
            android:padding="@dimen/dp_16"
            android:text="@string/check_all"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_below="@id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_16"
        android:visibility="gone"
        android:paddingBottom="@dimen/dp_16">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_333"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/all_file"/>

        <TextView
            android:id="@+id/total_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:layout_centerVertical="true"
            android:textColor="@color/color_151"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_16"
            tools:text="/1G"/>
        <TextView
            android:id="@+id/present_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:layout_centerVertical="true"
            android:textColor="@color/color_666"
            android:layout_toLeftOf="@id/total_size"
            tools:text="512MB"/>

    </RelativeLayout>
    <View
        android:id="@+id/view_1"
        android:layout_below="@id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ebe"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/file_rv"
        android:layout_below="@id/view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:overScrollMode="never"/>

    <LinearLayout
        android:id="@+id/img_null_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_100"
            android:visibility="visible"
            android:src="@mipmap/ic_file_null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_999"

            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/no_data"/>

    </LinearLayout>


</RelativeLayout>